实现备份时, 图片文件增量上传. 修复了小问题.
